Make sure we have saved network state before accessing it

BUG:418262